Fix more alignment

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -898,6 +898,7 @@ ul.rrssb-buttons{
   opacity: 1;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .box .overtext {
